# metaLncRNA

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_DEVELOPER.md  config.example.yaml  environment.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  inpi_registration.yml  paper.yml  pypi-publish.yml
INPI_Registration/: HASH_SHA256.txt  HASH_SHA512.txt  SOFTWARE_INFO.md  manifest.txt
conda/: meta.yaml
deploy/: Dockerfile  Singularity.def
docs/: README.md  conf.py  guide.rst  index.rst  metalncrna.rst  metalncrna.third_party.CPPred.bin.feamodule.rst  metalncrna.third_party.CPPred.bin.rst  metalncrna.third_party.CPPred.rst  metalncrna.third_party.rst  modules.rst  technical.rst  technical_architecture.md  troubleshooting.md  troubleshooting.rst  user_guide.md
examples/: README.md  config_template.yaml  run_example.sh  sample.fasta
galaxy/: metalncrna.xml  tool_test_output.html  tool_test_output.json
paper/: paper.bib  paper.md
scripts/: run_long_analysis.sh  run_serial.sh
src/: generate_report.py  plek_mdl__allsvm  plek_mdl__allsvmdesc  plek_mdl__logs  plek_mdl__modelling.logs
src/metalncrna/: cli.py
src/metalncrna/adapters/: base.py  cnci.py  cpat.py  cpc2.py  cppred.py  lgc.py  lncadeep.py  lncfinder.py  plek.py  rnasamba.py
src/metalncrna/data/: default_config.yaml
src/metalncrna/engine/: consensus.py  dispatcher.py  trainer.py
src/metalncrna/utils/: agent.py  downloader.py  envs.py  fasta.py  logger.py  reports.py  setup_envs.py
tests/: test_adapters_mock.py  test_agent.py  test_consensus.py  test_cpc2_parsing.py
tests/test_output/ValidationRun/: metalncrna.txt
tests/test_output/ValidationRun/intermediates/: cpat_raw.txt.r  cpc2_raw.txt  cppred_raw.txt  lgc_raw.txt  plek_raw.txt
tests/test_output/ValidationRun/intermediates/cnci_run/: CNCI.index
